# py_helpers

./: .gitignore  1_scrape_to_html.py  2_scrape_to_dirs.py  README.md  configuratoor.py  cuda_checker.py  delete_all_models.py  file_buddy.py  fun_dirs.py  gen_abi.py  json_injectoor.py  pyproject.toml  repo_ripper.py  torch_checker.py
_finished/: log_cleaner.py
_shelf/: doc_enjoyoor.py  file_finder.py
