[project]
name = "setup-utils"
version = "0.1.0"
description = "A collection of scripts designed to expedite the setup of new environments and streamline various tasks"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = ["uv", "ruff", "setuptools", "wheel"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
