[project]
name = "setup-utils"
version = "0.1.0"
description = "A collection of scripts designed to expedite the setup of new environments and streamline various tasks"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "uv",
    "ruff",
    "setuptools",
    "wheel",
    "requests",
    "urllib3",
    "cython",
    "cytoolz",
    "web3",
    "flashbots",
    "eth-account",
    "multicall",
    "lru-cache",
    "python-dev-tools",
    "snakeviz",
    "tornado",
    "uvicorn[standard]",
    "httpx[http2]",
    "aiohttp",
    "asyncio",
    "multidict",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
